# soil

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  clib.json  configure  package.json
SOIL/: SOIL.vcxproj  SOIL.vcxproj.filters
cmake/: SOILConfig.cmake.in  SOIL_GL.h.in  SOIL_defs.h.in
docs/: CMakeLists.txt  Doxyfile.in
include/SOIL/: SOIL.h
scripts/: generate-ctags  version
src/: image_dxt.c  image_helper.c  soil.c  stb_image_aug.c
